# pulse

./: .env.example  .gitignore  CLAUDE.md  INITIAL_SETUP_REVIEW.md  LICENSE  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml  initial-mvp-issues.csv  justfile  pyproject.toml  pyrightconfig.json
api/: Dockerfile  config.py  context_builder.py  db.py  dependencies.py  github_ingest.py  health.py  linear_ingest.py  main.py  metrics.py  priority_engine.py  rate_limiter.py  report.py  requirements.txt
api/cache/: __init__.py  memory_cache.py  redis_cache.py  strategies.py
api/middleware/: __init__.py  authentication.py  logging.py  security.py
api/models/: domain.py  schemas.py
api/monitoring/: README.md  __init__.py  circuit_breaker.py  metrics.py  profiling.py  tracing.py
api/routers/: health.py  ingest.py  monitoring.py  priority.py  report.py
api/tests/: __init__.py  test_metrics.py
api/utils/: helpers.py
db/: .env.example  README.md
db/migrations/: 0001_init.sql  0002_ingest_cursors.sql  0003_journey_tracking.sql  001_create_events_table.sql  002_create_metrics_daily_table.sql  003_create_feedback_table.sql
web/: .env.local.example  Dockerfile  next.config.js  package-lock.json  package.json  tailwind.config.js
web/app/: globals.css  layout.tsx  page.tsx
web/app/api/subscribe/: route.ts
web/app/dashboard/: layout.tsx
web/app/priority/: page.tsx
web/app/providers/: query-provider.tsx
