[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pulse"
version = "0.1.0"
description = "Pulse application"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0",
    "pydantic==2.5.1",
    "pydantic-settings==2.1.0",
    "sqlalchemy==2.0.23",
    "alembic==1.13.1",
    "asyncpg==0.29.0",
    "psycopg2-binary==2.9.9",
    "httpx==0.25.2",
    "python-jose[cryptography]==3.3.0",
    "python-multipart==0.0.6",
    "openai==1.3.8",
    "aiofiles==23.2.0",
    "python-dotenv==1.0.0",
]

[tool.pyright]
venvPath = "api"
venv = "venv"
include = ["api"]
exclude = [
    "**/node_modules",
    "**/__pycache__",
    "api/venv"
]
typeCheckingMode = "basic"
useLibraryCodeForTypes = true
autoImportCompletions = true
pythonVersion = "3.12"
pythonPlatform = "Darwin"

[[tool.pyright.executionEnvironments]]
root = "api"
pythonVersion = "3.12"
pythonPlatform = "Darwin"
extraPaths = []
